# json2vcf

./: .gitignore  CLAUDE.md  NIRVANA_VCF_CONVERSION_REPORT.md  PHASE01.md  PHASE02.md  PHASE03.md  README.md  RESEARCH_NIRVANA_JSON_VCF_CONVERSION.md  TESTING.md  pyproject.toml
json2vcf/: cli.py  mapper.py  parser.py  vcf_writer.py
scripts/: compare_annotations.py  compare_positions.py  extract_chroms.py
tests/: conftest.py  test_cli.py  test_edge_cases.py  test_integration.py  test_mapper.py  test_parser.py  test_vcf_writer.py
